--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -1,54 +1,48 @@
 <div class="page">
-
-	<!-- Nav options -->
 	<div class="nav-tabs-bar"></div>
-	
     <div class="page-body">
-        	<form [formGroup]="formBean">
-				<div>
-				
-					<div class="candidate-signup-page">
-            			<h1>{{'arenella-create-candidate-title' | translate}}</h1>
-            			<p class="creat-candidate-intro">
-						{{'arenella-create-candidate-intro' | translate}}
-						</p>
-            		</div>
-            		<div class="candidate-signup-panel">
-						<div class="div-spacing">
-							<p style="border-bottom:2px solid black;">{{'arenella-create-candidate-curriculum' | translate}}</p>
-							<input type="file" (change)="uploadCurriculumFile($event)">
-						</div>
-						<div class="div-spacing">
-							<table>
-								<tr>
-									<th class="tb-lbl">{{'arenella-create-candidate-firstname' | translate}}</th>
-									<td><input type="text" class="inpt-tab-std" formControlName="firstname"/></td>
-								</tr>
-								<tr>
-									<th class="tb-lbl">{{'arenella-create-candidate-surname' | translate}}</th>
-									<td><input type="text" class="inpt-tab-std" formControlName="surname"/></td>
-								</tr>
-								<tr>
-									<th class="tb-lbl">{{'arenella-create-candidate-email' | translate}}</th>
-									<td><input type="text" class="inpt-tab-std" formControlName="email"/></td>
-								</tr>
-							</table>
-						</div>
-						<div class="div-spacing">
-							<table>
-								<tr>
-									<th class="tb-lbl-checkbox">{{'arenella-create-candidate-contract' | translate}}</th>
-									<td><input type="checkbox" formControlName="contract" (click)="updateContract()"/></td>
-								</tr>
-								<tr>
-									<th class="tb-lbl-checkbox">{{'arenella-create-candidate-perm' | translate}}</th>
-									<td><input type="checkbox" formControlName="perm" (click)="updatePerm()"/></td>
-								</tr>
-							</table>
-						</div>
-						<div class="additional-info">
-							<h3>{{'arenella-create-candidate-additional-info-title' | translate}}</h3>
-							<div>
+		<form [formGroup]="formBean">
+			<div>
+				<div class="candidate-signup-page">
+            		<h1>{{'arenella-create-candidate-title' | translate}}</h1>
+            		<p class="creat-candidate-intro">{{'arenella-create-candidate-intro' | translate}}</p>
+            	</div>
+            	<div class="candidate-signup-panel">
+					<div class="div-spacing">
+						<p style="border-bottom:2px solid black;">{{'arenella-create-candidate-curriculum' | translate}}</p>
+						<input type="file" (change)="uploadCurriculumFile($event)">
+					</div>
+					<div class="div-spacing">
+						<table>
+							<tr>
+								<th class="tb-lbl">{{'arenella-create-candidate-firstname' | translate}}</th>
+								<td><input type="text" class="inpt-tab-std" formControlName="firstname"/></td>
+							</tr>
+							<tr>
+								<th class="tb-lbl">{{'arenella-create-candidate-surname' | translate}}</th>
+								<td><input type="text" class="inpt-tab-std" formControlName="surname"/></td>
+							</tr>
+							<tr>
+								<th class="tb-lbl">{{'arenella-create-candidate-email' | translate}}</th>
+								<td><input type="text" class="inpt-tab-std" formControlName="email"/></td>
+							</tr>
+						</table>
+					</div>
+					<div class="div-spacing">
+						<table>
+							<tr>
+								<th class="tb-lbl-checkbox">{{'arenella-create-candidate-contract' | translate}}</th>
+								<td><input type="checkbox" formControlName="contract" (click)="updateContract()"/></td>
+							</tr>
+							<tr>
+								<th class="tb-lbl-checkbox">{{'arenella-create-candidate-perm' | translate}}</th>
+								<td><input type="checkbox" formControlName="perm" (click)="updatePerm()"/></td>
+							</tr>
+						</table>
+					</div>
+					<div class="additional-info">
+						<h3>{{'arenella-create-candidate-additional-info-title' | translate}}</h3>
+						<div>
 								<p>{{'arenella-create-candidate-additional-info-text' | translate}}
 								
 								</p>
@@ -89,7 +83,7 @@
 												<option value="DAY">{{'arenella-create-candidate-day' | translate}}</option>
 												<option	value="YEAR">{{'arenella-create-candidate-year' | translate}}</option>
 											</select>
-											{{'arenella-create-candidate-from' | translate}}: <input type="number" formControlName="permFrom">{{'arenella-create-candidate-to' | translate}}: <input type="number" formControlName="permTo">
+											{{'arenella-create-candidate-from' | translate}}: <input type="number" formControlName="permFrom"> {{'arenella-create-candidate-to' | translate}}: <input type="number" formControlName="permTo">
 										</td>	
 									</tr>
 								</table>
@@ -112,14 +106,15 @@
 							<div>
 								<div class="action-buttons">
 									<button (click)="addCandidate()" [disabled]="uploadButtonDisabled()" class="btn btn-secondary arenella-btn">{{'arenella-create-candidate-btn-save' | translate}}</button>
+									
 								</div>
 							</div>
 						</div>
+						<br>
 					</div>
 				</div>
 			</form>
 		</div>
-
 </div>   
 
 <dialog #feedbackBox >
@@ -133,5 +128,3 @@
 		</div>       
 	</div>
 </dialog>
-			
-         
