--- a/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
+++ b/recruit-gui/src/app/recruiter-alerts/recruiter-alerts.component.html
@@ -6,7 +6,7 @@
 	<div class="page-body">
 	
 	<div class="action-buttons">
-		<button class="btn btn-secondary arenella-btn" routerLink="/suggestions">{{'arenella-recruiter-alerts-btn-back' | translate}}Back</button>
+		<button class="btn btn-secondary arenella-btn" routerLink="/suggestions">{{'arenella-recruiter-alerts-btn-back' | translate}}</button>
 	</div>
 	<div *ngIf="!hasAlerts()">
 		<h1>{{'arenella-recruiter-alerts-title' | translate}}</h1>
