--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -233,7 +233,7 @@
 							<select  formControlName="contractType">
 								<option></option>
 								<option value="CONTRACT">{{'arenella-recruiter-mp-update-contract' | translate}}</option>
-								<option value="PERM">{{'arenella-recruiter-mp-update-perm' | translate}}Perm</option>
+								<option value="PERM">{{'arenella-recruiter-mp-update-perm' | translate}}</option>
 								<option value="BOTH">{{'arenella-recruiter-mp-update-both' | translate}}</option>
 							</select>
 						</td>	
