translate done - ready for test

--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -103,7 +103,7 @@
 							
 								<select formControlName="permTimeUnit">
 									<option value="HOUR">{{'arenella-new-candidate-hour' | translate}}</option>
-									<option value="DAY">{{'arenella-new-candidate-day' | translate}}Day</option>
+									<option value="DAY">{{'arenella-new-candidate-day' | translate}}</option>
 									<option	value="YEAR">{{'arenella-new-candidate-year' | translate}}</option>
 								</select>
 								{{'arenella-new-candidate-from' | translate}}: <input type="number" formControlName="permFrom"> {{'arenella-new-candidate-to' | translate}}: <input type="number" formControlName="permTo">
