--- a/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
+++ b/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
@@ -35,7 +35,7 @@
 			<div class="chart-panel">
 				<div *ngIf="currentTab == 'general-stats'">
 					<h2>{{'arenella-recruiter-stats-gen-hdr' | translate}}</h2>
-					<h5>Totals:</h5>
+					<h5>{{'arenella-recruiter-stats-totals' | translate}}</h5>
 					<table>
 						<tr>
 							<td>{{'arenella-recruiter-stats-gen-active-users' | translate}}</td>
