--- a/recruit-gui/src/app/email/email.component.html
+++ b/recruit-gui/src/app/email/email.component.html
@@ -10,7 +10,7 @@
 			<button class="btn btn-secondary arenella-btn" (click)="composeReply()"			*ngIf="currentEmail.sender.senderType === 'RECRUITER' || currentEmail.sender.senderType === 'CANDIDATE'">{{'arenella-email-btn-reply' | translate}}</button>
 			<button class="btn btn-secondary arenella-btn" (click)="markAsUnread()" 			*ngIf="currentEmail.viewed">{{'arenella-email-btn-undread' | translate}}</button>
 			<button class="btn btn-secondary arenella-btn"  									*ngIf="!currentEmail.viewed" disabled>{{'arenella-email-btn-unread' | translate}}</button>
-			<button class="btn btn-secondary arenella-btn" (click)="viewInbox()">Back</button>
+			<button class="btn btn-secondary arenella-btn" (click)="viewInbox()">{{'arenella-email-menu-back' | translate}}</button>
 		</div>
 		
 		<div *ngIf="hasEmails()">
@@ -25,7 +25,7 @@
 				<tr class="email_viewed_{{email.viewed}}" *ngFor="let email of emails" (click)="viewEmail(email)">
 					<td>{{email.sender.senderName}}</td>
 					<td>{{email.title}}</td>
-					<td>{{email.created | date: 'dd MMM'}}</td>
+					<td>{{email.created | date: 'dd / MM'}}</td>
 				</tr>
 			</table>
 		</div>
@@ -41,7 +41,7 @@
 				<div class="left-div-header" *ngIf="currentEmail.sender.senderType === 'RECRUITER' || currentEmail.sender.senderType === 'CANDIDATE'">{{currentEmail.sender.senderName}}</div>
 				<div class="left-div-header" *ngIf="currentEmail.sender.senderType != 'RECRUITER'">{{currentEmail.sender.senderName}} : {{currentEmail.sender.email}}</div>
 				<div class="right-div-header">
-					{{currentEmail.created | date: 'dd MMMM yyyy'}}
+					{{currentEmail.created | date: 'dd / MM / yyyy'}}
 					<br>
 					{{currentEmail.created | date: 'hh:mm:ss'}}
 				</div>
