--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -1,4 +1,5 @@
 <div class="page">
+
 	<!-- Nav options -->
 	<div class="nav-tabs-bar"></div>
 
@@ -203,7 +204,7 @@
 				<div *ngIf="createAlertStep == 0">
 					<P>{{'arenella-listing-email-alert-1' | translate}}</P>
 					<select formControlName="contractType">
-						<option *ngFor="let type of contractTypeOptions" [ngValue]="type.value">{{type.label}}</option>
+						<option *ngFor="let type of contractTypeOptions" [ngValue]="type.value">{{type.label | translate}}</option>
 					</select>
 				</div>
 				<div *ngIf="createAlertStep == 1">
