--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
@@ -14,7 +14,7 @@
 	<button class="btn btn-secondary arenella-btn" 					(click)="rememberCandidate(suggestedCandidate)" 		*ngIf="showBtnUnsavedCandidateDisabled()" title="Add candidate to your list of saved candidates" disabled>{{'arenella-suggestions-profile-btn-save' | translate}}</button>
 	<button class="btn btn-secondary arenella-btn" 					(click)="forgetCandidate()" 							*ngIf="showBtnUnsaveCandidate()" title="removed candidate from your list of saved candidates">{{'arenella-suggestions-profile-btn-unsave' | translate}}</button>
 	<button class="btn btn-secondary arenella-btn" 					(click)="showNotesDialog(notesBox,suggestedCandidate)" 	*ngIf="showBtnNotes()">{{'arenella-suggestions-profile-btn-notes' | translate}}</button>
-	<button class="btn btn-secondary arenella-btn" 					(click)="back()">{{'arenella-suggestions-profile-btn-back' | translate}}</button>
+	<button class="btn btn-secondary arenella-btn" 					(click)="back()"										*ngIf="!isCandidate()">{{'arenella-suggestions-profile-btn-back' | translate}}</button>
 </div>
 			
 <!-- Left Pane -->
