translate canidate tested

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -123,7 +123,7 @@
 									<p class="email-label">{{'arenella-listing-messate-to-recruiter' | translate}}</p>
 									<textarea class="contact-recruiter-textarea" formControlName="message"></textarea>
 									<div class="div-spacing">
-										<p class="email-label">{{'arenella-listing-curriculum' | translate}}Curriculum</p>
+										<p class="email-label">{{'arenella-listing-curriculum' | translate}}</p>
 										<div *ngIf="!curriculumFile">
 											<br>
 											<input type="checkbox" disabled="disabled" checked><span>{{'arenella-listing-use-stored-cv' | translate}}</span>
