Finished testing translate Dutch English and French

--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -142,7 +142,7 @@
 						<td>
 							<select  formControlName="contractType">
 								<option></option>
-								<option value="CONTRACT">{{'arenella-recruiter-mp-add-contract' | translate}}Contract</option>
+								<option value="CONTRACT">{{'arenella-recruiter-mp-add-contract' | translate}}</option>
 								<option value="PERM">{{'arenella-recruiter-mp-add-perm' | translate}}</option>
 								<option value="BOTH">{{'arenella-recruiter-mp-add-both' | translate}}</option>
 							</select>
