--- a/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
+++ b/recruit-gui/src/app/recruiter-profile/recruiter-profile.component.html
@@ -179,7 +179,7 @@
 							</td>
 						</tr>
 						<tr>
-							<th>{{'arenella-recruiter-prof-sectors' | translate}}Sectors</th>
+							<th>{{'arenella-recruiter-prof-sectors' | translate}}</th>
 							<td>
 								<select formControlName="sectorItem" (change)="addSectorItem()">
 									<option *ngFor="let opt of sectorOptions" value="{{opt}}">{{opt[1]}}</option>
