--- a/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
+++ b/recruit-gui/src/app/recruiter-stats/recruiter-stats.component.html
@@ -61,7 +61,7 @@
 					</table>
 				</div>
 				<div>	
-					<h3 style="margin-left:20px;">{{listingViewsChart.chartTitle}}</h3>
+					<h3 style="margin-left:20px;">{{listingViewsChart.chartTitle | translate}}</h3>
 				</div>
 			</div>
 			<div class="chart-panel">
