--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -20,7 +20,7 @@
 			    <span class="nav-link" (click)="switchTab('availability')">{{'arenella-stats-availability' | translate}}</span>
 			  </li>
 			  <li class="nav-item statsChartTab">
-			    <span class="nav-link" (click)="switchTab('newCandidateStats')">{{'arenella-stats-new-candidates' | translate}}New Candidate Stats</span>
+			    <span class="nav-link" (click)="switchTab('newCandidateStats')">{{'arenella-stats-new-candidates' | translate}}</span>
 			  </li>
 			</ul>
 		</div>
