--- a/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
+++ b/recruit-gui/src/app/recruiter-marketplace/recruiter-marketplace.component.html
@@ -4,9 +4,9 @@
 		<ul class="nav nav-tabs">
 		  <li class="nav-item">
 		    <span class="nav-link tabNav tabNavActive" *ngIf="showDemand  && unseenOpenPositions > 0" (click)="switchTab('showDemand')"><span class="unseen-posts">{{unseenOpenPositions}}</span>{{'arenella-recruiter-mp-open-roles' | translate}}</span>
-		    <span class="nav-link tabNav tabNavActive" *ngIf="showDemand  && unseenOpenPositions <= 0" (click)="switchTab('showDemand')"><span style="margin-left:20px;">&nbsp;</span>{{'arenella-recruiter-mp-open-roles' | translate}}Open Roles</span>
-		    <span class="nav-link tabNav" *ngIf="!showDemand && unseenOpenPositions > 0" (click)="switchTab('showDemand')"><span class="unseen-posts">{{unseenOpenPositions}}</span>{{'arenella-recruiter-mp-open-roles' | translate}}Open Roles</span>
-		    <span class="nav-link tabNav" *ngIf="!showDemand   && unseenOpenPositions <= 0" (click)="switchTab('showDemand')"><span style="margin-left:20px;">&nbsp;</span>{{'arenella-recruiter-mp-open-roles' | translate}}Open Roles</span>
+		    <span class="nav-link tabNav tabNavActive" *ngIf="showDemand  && unseenOpenPositions <= 0" (click)="switchTab('showDemand')"><span style="margin-left:20px;">&nbsp;</span>{{'arenella-recruiter-mp-open-roles' | translate}}</span>
+		    <span class="nav-link tabNav" *ngIf="!showDemand && unseenOpenPositions > 0" (click)="switchTab('showDemand')"><span class="unseen-posts">{{unseenOpenPositions}}</span>{{'arenella-recruiter-mp-open-roles' | translate}}</span>
+		    <span class="nav-link tabNav" *ngIf="!showDemand   && unseenOpenPositions <= 0" (click)="switchTab('showDemand')"><span style="margin-left:20px;">&nbsp;</span>{{'arenella-recruiter-mp-open-roles' | translate}}</span>
 		  </li>
 		  <li class="nav-item">
 		    <span class="nav-link tabNav tabNavActive" *ngIf="showSupply  && unseenOfferedCandidates >  0"  (click)="switchTab('showSupply')"><span class="unseen-posts">{{unseenOfferedCandidates}}</span>{{'arenella-recruiter-mp-your-candidates' | translate}}</span>
@@ -57,10 +57,10 @@
 		<!-- Show Demand  -->
 		<div *ngIf="showDemand">
 			<div class="action-buttons">
-				<button class="btn btn-secondary arenella-btn" 					(click)="showJustMyOpenPositions()" 	*ngIf="!showJustMyOpenPositionsActive">{{'arenella-recruiter-mp-btn-my-roles' | translate}}</button>
-				<button class="btn btn-secondary arenella-btn" 					(click)="fetchOpenPositions()" 		*ngIf="showJustMyOpenPositionsActive">{{'arenella-recruiter-mp-btn-all-roles' | translate}}</button>
-				<button class="btn btn-secondary arenella-btn" 					(click)="switchTab('addDemand')" *ngIf="!isAuthenticatedAsAdmin() && passedCreditCheck">{{'arenella-recruiter-mp-btn-make-request' | translate}}</button>
-				<button class="btn btn-secondary arenella-btn" 					(click)="showNoCredits()" *ngIf="!isAuthenticatedAsAdmin() && !passedCreditCheck">{{'arenella-recruiter-mp-btn-request-candidate' | translate}}</button>
+				<button class="btn btn-secondary arenella-btn" (click)="showJustMyOpenPositions()" 	*ngIf="!isAuthenticatedAsAdmin() && !showJustMyOpenPositionsActive">{{'arenella-recruiter-mp-btn-my-roles' | translate}}</button>
+				<button class="btn btn-secondary arenella-btn" (click)="fetchOpenPositions()" 		*ngIf="showJustMyOpenPositionsActive">{{'arenella-recruiter-mp-btn-all-roles' | translate}}</button>
+				<button class="btn btn-secondary arenella-btn" (click)="switchTab('addDemand')" 	*ngIf="!isAuthenticatedAsAdmin() && passedCreditCheck">{{'arenella-recruiter-mp-btn-make-request' | translate}}</button>
+				<button class="btn btn-secondary arenella-btn" (click)="showNoCredits()" 			*ngIf="!isAuthenticatedAsAdmin() && !passedCreditCheck">{{'arenella-recruiter-mp-btn-request-candidate' | translate}}</button>
 			</div>
 			<p>{{'arenella-recruiter-mp-roles-desc' | translate}}
 			 
