translation bug fixes

--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -175,7 +175,7 @@
 	</div>
 	<div class="feedbackBox;">
 		<div class="modal-body"  style="height:400px;">
-			<p>{{'arenella-listing-publicity-open-position' | translate}}Open Position: {{selectedListing.title}}</p>
+			<p>{{'arenella-listing-publicity-open-position' | translate}}: {{selectedListing.title}}</p>
 			<br>
 			<p>{{'arenella-listing-publicity-location' | translate}}: {{getCountryCode(selectedListing.country)}}</p>
 			<br>
