--- a/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
+++ b/recruit-gui/src/app/suggestions/candidate-profile/candidate-profile.component.html
@@ -37,7 +37,7 @@
 		<div style="width:100%;">
 			<div style="white-space:pre-line;font-family: Roboto, 'Helvetica Neue', sans-serif;">
 			{{'arenella-suggestions-profile-intro-text' | translate}} {{this.suggestedCandidate.firstname}} 
-			{{'arenella-suggestions-profile-intro-text-2' | translate}} {{this.suggestedCandidate.yearsExperience}} {{'arenella-suggestions-profile-intro-text-3' | translate}}years experience. I am currently looking for a new role.
+			{{'arenella-suggestions-profile-intro-text-2' | translate}} {{this.suggestedCandidate.yearsExperience}} {{'arenella-suggestions-profile-intro-text-3' | translate}}
 		
 			{{'arenella-suggestions-profile-intro-text-4' | translate}} {{this.suggestedCandidate.country | enumToHumanReadableValue}} 
 			</div>
