--- a/recruit-gui/src/app/new-candidate/new-candidate.component.css
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.css
@@ -157,9 +157,16 @@
     table-layout: fixed;
  }
  
- select{
- 	max-width:50%;
- }
+input{
+	max-width:50%;
+	min-width:25%;
+}
+ 
+select{
+	max-width:50%;
+	min-width:25%;
+}
+ 
  
  .button-panel-mobile{
 	padding-left:10px;
@@ -181,6 +188,16 @@
 @media (max-width: 700px) {
 	.arenella-btn-popup-action {
 	    width: 100%;
+	}
+	
+	input{
+		width:100%;
+		max-width:100%;
+	}
+ 
+	select{
+		width:100%;
+		max-width:100%;
 	}
 }
  
